add starred filter

--- a/index.html
+++ b/index.html
@@ -315,17 +315,18 @@
       <div class="work-display">
         <div class="filters">
           <ul>
-            <li class="filter active-filter"><p>Unfiltered</p></li>
-            <li class="filter"><p>Front-end</p></li>
-            <li class="filter"><p>JavaScript</p></li>
-            <li class="filter"><p>React</p></li>
-            <li class="filter"><p>AI</p></li>
-            <li class="filter"><p>Back-end</p></li>
-            <li class="filter"><p>API</p></li>
-            <li class="filter"><p>External-API</p></li>
-            <li class="filter"><p>SQL</p></li>
-            <li class="filter"><p>Games</p></li>
-            <li class="filter"><p>Unity</p></li>
+            <li class="filter all active-filter"><p>All projects</p></li>
+            <li class="filter starred"><p>Starred</p></li>
+            <li class="filter front-end"><p>Front-end</p></li>
+            <li class="filter javascript"><p>JavaScript</p></li>
+            <li class="filter react"><p>React</p></li>
+            <li class="filter ai"><p>AI</p></li>
+            <li class="filter back-end"><p>Back-end</p></li>
+            <li class="filter api"><p>API</p></li>
+            <li class="filter external-api"><p>External API</p></li>
+            <li class="filter sql"><p>SQL</p></li>
+            <li class="filter games"><p>Games</p></li>
+            <li class="filter unity"><p>Unity</p></li>
           </ul>
         </div>
         <!------------------------------------------------->
@@ -337,7 +338,7 @@
         <div id="work-list" class="work-list">
           <!----------------project------------------>
           <div
-            class="work unfiltered front-end react javascript ai external-api"
+            class="work all starred front-end react javascript ai external-api"
           >
             <video
               class="media"
@@ -348,7 +349,10 @@
               controls
             ></video>
             <div class="work-description">
-              <h2>CodepenAI</h2>
+              <div class="project-title">
+                <h2>CodepenAI</h2>
+                <h2><i class="fa-solid fa-star"></i></h2>
+              </div>
               <p>
                 A codepen style code editor powered by AI using OpenAI API to
                 create code and Unsplash API to add images. Build and modify web
@@ -376,7 +380,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered front-end react javascript">
+          <div class="work all front-end react javascript">
             <img
               class="media"
               src="images/works/calculator.png"
@@ -404,7 +408,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered front-end external-api javascript ai">
+          <div class="work all front-end external-api javascript ai">
             <img
               class="media"
               src="images/works/ImageGenerator.png"
@@ -435,7 +439,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered front-end external-api javascript">
+          <div class="work all front-end external-api javascript">
             <img
               class="media"
               src="images/works/imageSearchApp.png"
@@ -466,7 +470,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered front-end games javascript">
+          <div class="work all starred front-end games javascript">
             <video
               class="media"
               src="images/works/Sokoban.mp4"
@@ -476,7 +480,10 @@
               controls
             ></video>
             <div class="work-description">
-              <h2>Sokoban</h2>
+              <div class="project-title">
+                <h2>Sokoban game</h2>
+                <h2><i class="fa-solid fa-star"></i></h2>
+              </div>
               <p>
                 A sokoban game with a built-in map converter made with
                 JavaScript. 30 maps and christmas edition available in-game.
@@ -500,14 +507,17 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered back-end sql api">
+          <div class="work all starred back-end sql api">
             <img
               class="media"
               src="images/works/Community.png"
               alt="community"
             />
             <div class="work-description">
-              <h2>Community portal</h2>
+              <div class="project-title">
+                <h2>Community portal</h2>
+                <h2><i class="fa-solid fa-star"></i></h2>
+              </div>
               <p>
                 The backend of a community portal site. An API project with a
                 connection to an SQL database using Entity Framework. Frontend
@@ -528,7 +538,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered games unity">
+          <div class="work all starred games unity">
             <video
               class="media"
               src="images/works/PlasticSlurg.mp4"
@@ -538,7 +548,10 @@
               controls
             ></video>
             <div class="work-description">
-              <h2>Plastic Slurg</h2>
+              <div class="project-title">
+                <h2>Plastic Slurg</h2>
+                <h2><i class="fa-solid fa-star"></i></h2>
+              </div>
               <p>
                 2D shooter platformer. A “metal slug” style game made with
                 Unity.
@@ -562,7 +575,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered back-end">
+          <div class="work all back-end">
             <img
               class="media"
               src="images/works/vendingmachines.jpg"
@@ -584,7 +597,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered front-end javascript">
+          <div class="work all front-end javascript">
             <img
               class="media"
               src="images/works/Portfolio.png"
@@ -614,7 +627,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered games unity">
+          <div class="work all games unity">
             <video
               class="media"
               src="images/works/SlidingPuzzles.mp4"
@@ -648,7 +661,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered front-end">
+          <div class="work all front-end">
             <img
               class="media"
               src="images/works/Spotify.png"
@@ -676,7 +689,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered back-end">
+          <div class="work all back-end">
             <img
               class="media"
               src="images/works/lawnmowers.jpg"
@@ -698,7 +711,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered games unity">
+          <div class="work all games unity">
             <video
               class="media"
               src="images/works/FlapryBlirb.mp4"
@@ -731,7 +744,7 @@
             </div>
           </div>
           <!----------------project------------------>
-          <div class="work unfiltered front-end">
+          <div class="work all front-end">
             <img
               class="media"
               src="images/works/PatisserieLente.png"
