change starred to featured

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="filters">
           <ul>
             <li class="filter all active-filter"><p>All projects</p></li>
-            <li class="filter starred"><p>Starred</p></li>
+            <li class="filter starred"><p>Featured</p></li>
             <li class="filter front-end"><p>Front-end</p></li>
             <li class="filter javascript"><p>JavaScript</p></li>
             <li class="filter react"><p>React</p></li>
