--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
         <div class="filters">
           <ul>
             <li class="filter all active-filter"><p>All projects</p></li>
-            <li class="filter full-stack"><p>Featured</p></li>
-            <li class="filter featured"><p>Full-stack</p></li>
+            <li class="filter featured"><p>Featured</p></li>
+            <li class="filter full-stack"><p>Full-stack</p></li>
             <li class="filter front-end"><p>Front-end</p></li>
             <li class="filter javascript"><p>JavaScript</p></li>
             <li class="filter react"><p>React</p></li>
