add codepenai new filters

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <div id="work-list" class="work-list">
           <!----------------project------------------>
           <div
-            class="work all featured full-stack front-end react javascript ai external-api"
+            class="work all featured full-stack front-end react javascript ai external-api api back-end sql"
           >
             <video
               class="media"
