--- a/index.html
+++ b/index.html
@@ -385,6 +385,42 @@
             </div>
           </div>
           <!----------------project------------------>
+          <div
+            class="work all featured full-stack front-end react javascript api back-end sql"
+          >
+            <img class="media" src="images/works/listr.png" alt="lister" />
+            <div class="work-description">
+              <div class="project-title">
+                <h2>Listr</h2>
+                <h2><i class="fa-solid fa-star"></i></h2>
+              </div>
+              <p>
+                A multi purpose list creator. Can be used to make TO-DO lists,
+                bug trackers, general lists... <br /><br />
+                Back-end consists of an API with a connection to a MySQL server
+                using Entity Framework. Not implemented in the live demo yet.
+              </p>
+              <div class="buttons">
+                <a
+                  href="https://github.com/Connectslide121/Listr"
+                  title="Repository"
+                  target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                  ><span>SOURCE CODE</span></a
+                >
+                <a
+                  href="https://connectslide121.github.io/Listr"
+                  title="Visit site"
+                  target="_blank"
+                  ><i class="fa-solid fa-link"></i><span>LIVE DEMO</span></a
+                >
+              </div>
+              <div class="work-date">
+                <h3>January 2024 - <span>WIP</span></h3>
+              </div>
+            </div>
+          </div>
+          <!----------------project------------------>
           <div class="work all front-end react javascript">
             <img
               class="media"
