add listr video

--- a/index.html
+++ b/index.html
@@ -388,7 +388,14 @@
           <div
             class="work all featured full-stack front-end react javascript api back-end sql"
           >
-            <img class="media" src="images/works/listr.png" alt="lister" />
+            <video
+              class="media"
+              src="images/works/listr.mp4"
+              type="video/mp4"
+              autoplay
+              muted
+              controls
+            ></video>
             <div class="work-description">
               <div class="project-title">
                 <h2>Listr</h2>
