change listr description

--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
                 <h2><i class="fa-solid fa-star"></i></h2>
               </div>
               <p>
-                A multi purpose list creator. Can be used to make TO-DO lists,
-                bug trackers, general lists... <br /><br />
+                A multi purpose list creator. Create your To-do lists, bug
+                trackers, general lists... I always use it for my projects.<br /><br />
                 Back-end consists of an API with a connection to a MySQL server
                 using Entity Framework. Not implemented in the live demo yet.
               </p>
