change list to listr-livedemo

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                   ><span>SOURCE CODE</span></a
                 >
                 <a
-                  href="https://connectslide121.github.io/Listr"
+                  href="https://connectslide121.github.io/Listr-livedemo"
                   title="Visit site"
                   target="_blank"
                   ><i class="fa-solid fa-link"></i><span>LIVE DEMO</span></a
