change codepenAI livedemo link

--- a/index.html
+++ b/index.html
@@ -362,11 +362,13 @@
                 Build and modify web apps via prompts or write and modify the
                 code yourself.<br /><br />
                 Back-end consists of an API with a connection to a MySQL server
-                using Entity Framework. Not implemented in the live demo yet.
+                using Entity Framework. Not implemented in the live demo yet.<br /><br />
+                There is no back-end in the live demo, the data resets on page
+                reload.
               </p>
               <div class="buttons">
                 <a
-                  href="https://github.com/Connectslide121/codepen-ai"
+                  href="https://connectslide121.github.io/CodepenAI-livedemo/"
                   title="Repository"
                   target="_blank"
                   ><i class="fa-brands fa-github"></i
@@ -405,7 +407,9 @@
                 A multi purpose list creator. Create your To-do lists, bug
                 trackers, general lists... I always use it for my projects.<br /><br />
                 Back-end consists of an API with a connection to a MySQL server
-                using Entity Framework. Not implemented in the live demo yet.
+                using Entity Framework.<br /><br />
+                There is no back-end in the live demo, the data resets on page
+                reload.
               </p>
               <div class="buttons">
                 <a
