fix codepenAI links

--- a/index.html
+++ b/index.html
@@ -368,14 +368,14 @@
               </p>
               <div class="buttons">
                 <a
-                  href="https://connectslide121.github.io/CodepenAI-livedemo/"
+                  href="https://github.com/Connectslide121/CodepenAI"
                   title="Repository"
                   target="_blank"
                   ><i class="fa-brands fa-github"></i
                   ><span>SOURCE CODE</span></a
                 >
                 <a
-                  href="https://connectslide121.github.io/codepen-ai/"
+                  href="https://connectslide121.github.io/CodepenAI-livedemo/"
                   title="Visit site"
                   target="_blank"
                   ><i class="fa-solid fa-link"></i><span>LIVE DEMO</span></a
