--- a/index.html
+++ b/index.html
@@ -343,6 +343,56 @@
           >
             <video
               class="media"
+              src="images/works/daietpedia.mp4"
+              type="video/mp4"
+              autoplay
+              muted
+              controls
+            ></video>
+            <div class="work-description">
+              <div class="project-title">
+                <h2>DAIETpedia</h2>
+                <h2><i class="fa-solid fa-star"></i></h2>
+              </div>
+              <p>
+                A codepen style code editor powered by AI using external
+                APIs:<br /><br />
+                -OpenAI API to generate code (OpenAI API key required) <br />
+                -Unsplash API to get images<br /><br />
+                Build and modify web apps via prompts or write and modify the
+                code yourself.<br /><br />
+                Back-end consists of an API with a connection to a MySQL server
+                using Entity Framework. Not implemented in the live demo yet.<br /><br />
+                There is no back-end in the live demo, the data resets on page
+                reload.
+              </p>
+              <div class="buttons">
+                <a
+                  href="https://github.com/Connectslide121/daietpedia"
+                  title="Repository"
+                  target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                  ><span>SOURCE CODE</span></a
+                >
+                <a
+                  href="https://connectslide121.github.io/daietpedia/"
+                  title="Visit site"
+                  target="_blank"
+                  ><i class="fa-solid fa-link"></i><span>LIVE DEMO</span></a
+                >
+              </div>
+              <div class="work-date">
+                <h3>January 2024 - <span>WIP</span></h3>
+              </div>
+            </div>
+          </div>
+          <!----------------project------------------>
+
+          <div
+            class="work all featured full-stack front-end react javascript ai external-api api back-end sql"
+          >
+            <video
+              class="media"
               src="images/works/CodepenAI.mp4"
               type="video/mp4"
               autoplay
@@ -427,7 +477,7 @@
                 >
               </div>
               <div class="work-date">
-                <h3>January 2024 - <span>WIP</span></h3>
+                <h3>January 2024</h3>
               </div>
             </div>
           </div>
