--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="The portfolio website of Jon
+    Mendizabal, an aspiring web developer specializing in .NET and passionate
+    about coding, game development, and music."
+    />
     <title>Jon Mendizabal - Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
