--- a/index.html
+++ b/index.html
@@ -361,16 +361,11 @@
                 <h2><i class="fa-solid fa-star"></i></h2>
               </div>
               <p>
-                A codepen style code editor powered by AI using external
-                APIs:<br /><br />
-                -OpenAI API to generate code (OpenAI API key required) <br />
-                -Unsplash API to get images<br /><br />
-                Build and modify web apps via prompts or write and modify the
-                code yourself.<br /><br />
-                Back-end consists of an API with a connection to a MySQL server
-                using Entity Framework. Not implemented in the live demo yet.<br /><br />
-                There is no back-end in the live demo, the data resets on page
-                reload.
+                Welcome to DAIETpedia, the innovative recipe website where your
+                culinary journey is personalized by AI. Whether you're searching
+                for recipes by ingredient, cuisine, or dietary restrictions,
+                DAIETpedia is here to suggest a whole menu tailored just for
+                you!
               </p>
               <div class="buttons">
                 <a
