add password input npm package to work list

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
             <li class="filter front-end"><p>Front-end</p></li>
             <li class="filter javascript"><p>JavaScript</p></li>
             <li class="filter react"><p>React</p></li>
+            <li class="filter npm"><p>npm</p></li>
             <li class="filter ai"><p>AI</p></li>
             <li class="filter back-end"><p>Back-end</p></li>
             <li class="filter api"><p>API</p></li>
@@ -388,6 +389,48 @@
             </div>
           </div>
           <!----------------project------------------>
+          <div class="work all featured front-end react javascript npm">
+            <video
+              class="media"
+              src="images/works/password-input.mp4"
+              type="video/mp4"
+              autoplay
+              muted
+              controls
+            ></video>
+            <div class="work-description">
+              <div class="project-title">
+                <h2>npm UI component</h2>
+                <h2><i class="fa-solid fa-star"></i></h2>
+              </div>
+              <p>
+                The Password Input Component is a reusable and secure UI
+                component designed for user password input in web applications.
+                It enhances security by including strength indication. The
+                strength requirements default to the same as ASP.NET Core
+                Identity and can be easily customized via props.
+              </p>
+              <div class="buttons">
+                <a
+                  href="https://github.com/Connectslide121/password-input-component-with-tooltip"
+                  title="Repository"
+                  target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                  ><span>SOURCE CODE</span></a
+                >
+                <a
+                  href="https://www.npmjs.com/package/password-input-component-with-tooltip"
+                  title="npm site"
+                  target="_blank"
+                  ><i class="fa-solid fa-link"></i><span>NPM PAGE</span></a
+                >
+              </div>
+              <div class="work-date">
+                <h3>February 2024 - <span>WIP</span></h3>
+              </div>
+            </div>
+          </div>
+          <!----------------project------------------>
 
           <div
             class="work all featured full-stack front-end react javascript ai external-api api back-end sql"
@@ -433,7 +476,7 @@
                 >
               </div>
               <div class="work-date">
-                <h3>January 2024 - <span>WIP</span></h3>
+                <h3>January 2024</h3>
               </div>
             </div>
           </div>
@@ -623,8 +666,9 @@
               </div>
               <p>
                 The backend of a community portal site. An API project with a
-                connection to an SQL database using Entity Framework. Frontend
-                coming soon.
+                connection to an SQL database using Entity Framework. User
+                authentication and authorization with ASP-NET Core Identity.
+                Frontend coming soon.
               </p>
               <div class="buttons">
                 <a
@@ -725,7 +769,7 @@
                 >
               </div>
               <div class="work-date">
-                <h3>November 2023 - <span>WIP</span></h3>
+                <h3>November 2023</h3>
               </div>
             </div>
           </div>
