remove WIP from npm password-input

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 >
               </div>
               <div class="work-date">
-                <h3>February 2024 - <span>WIP</span></h3>
+                <h3>February 2024</h3>
               </div>
             </div>
           </div>
